tests/invalid/import_inside_for/main.py
def main() -> None:
    for i in range(1):
        import imports.module_a
